--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -471,6 +471,5 @@ model.wages
 
 ```{r}
 QdiffTest = cbind(X2$M0,X2$M1,X2$M2)
-test_model2 = auto.arima(Qdiff, xreg=diff(log(QdiffTest)))
-forecast::forecast(test_model2, lead=1, id = NULL, alpha = 0.05, output= TRUE)
+predict(model.4, newxreg=QdiffTest)
 ```
